--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet"
-          href="style.css">
+          href="src/style.css">
 </head>
 <body>
-<!--<button id="clear-all" type="button">Clear all</button>-->
 <form id="form">
     <label for="url">Enter
         URL</label>
@@ -22,6 +21,7 @@
     <p>Example: https://websiteaddress.com/<span class="astrix"><span>*</span></span>/reports</p>
 </div>
 <div id="data"></div>
-<script src="./scripts.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<script src="src/scripts.js"></script>
 </body>
 </html>
