--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet"
-          href="src/style.css">
+    <link rel="stylesheet" href="src/alertifyjs/css/alertify.min.css">
+    <link rel="stylesheet" href="src/alertifyjs/css/themes/default.min.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
 <form id="form">
@@ -21,7 +22,7 @@
     <p>Example: https://websiteaddress.com/<span class="astrix"><span>*</span></span>/reports</p>
 </div>
 <div id="data"></div>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<script src="src/alertifyjs/alertify.min.js"></script>
 <script src="src/scripts.js"></script>
 </body>
 </html>
