--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br>
     <p>*A URL can be edited by typing a new one with same label name</p>
 </div>
-<div id="data"></div>
+<ul tabindex="1" id="data"></ul>
 <script src="src/alertifyjs/alertify.min.js"></script>
 <script src="src/scripts.js"></script>
 </body>
