--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
     </button>
 </form>
 <div class="instructions">
-    <p>Add an <u>astrix</u> where it supposed to be dynamic,</p>
+    <p>Add an <u>asterisk</u> where it supposed to be dynamic,</p>
     <p>Example: websiteaddress.com/<span class="astrix"><span>*</span></span>/reports</p>
     <br>
     <p>*A URL can be edited by typing a new one with same label name</p>
 </div>
 <ul tabindex="1" id="data"></ul>
+<div class="usage">
+    <span><span class="icon code" title="Arrow down">&darr;</span> Select down</span>
+    <span><span class="icon code" title="Arrow up">&uarr;</span> Select up</span>
+    <span><span class="code">CTRL + SHIFT + F</span>Opens extension</span>
+</div>
 <script src="src/alertifyjs/alertify.min.js"></script>
 <script src="src/scripts.js"></script>
 </body>
